--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cssrxp",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "RegExp pattern library for simple CSS data-types matching",
   "author": "NOuSantx <nousantx@gmail.com>",
   "license": "MIT",
@@ -21,17 +21,15 @@
     "README.md",
     "LICENSE"
   ],
-  "types": "dist/index.d.ts",
+  "types": "index.d.ts",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "browser": "dist/index.iife.js",
   "scripts": {
-    "build": "vite build",
-    "build:prod": "pnpm build && tsc --emitDeclarationOnly --outDir dist"
+    "build": "vite build"
   },
   "packageManager": "pnpm@10.4.0+sha512.6b849d0787d97f8f4e1f03a9b8ff8f038e79e153d6f11ae539ae7c435ff9e796df6a862c991502695c7f9e8fac8aeafc1ac5a8dab47e36148d183832d886dd52",
   "devDependencies": {
-    "typescript": "^5.8.3",
     "vite": "^6.3.5"
   }
 }
