--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cssrxp",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "RegExp pattern library for simple CSS data-types matching",
   "author": "NOuSantx <nousantx@gmail.com>",
   "license": "MIT",
@@ -16,15 +16,23 @@
     "url": "https://github.com/nousantx/cssrxp/issues"
   },
   "files": [
-    "dist",
+    "./dist",
+    "index.d.ts",
     "package.json",
     "README.md",
     "LICENSE"
   ],
-  "types": "index.d.ts",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
-  "browser": "dist/index.iife.js",
+  "types": "./index.d.ts",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.es.js",
+  "browser": "./dist/index.iife.js",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "require": "./dist/index.cjs.js",
+      "import": "./dist/index.es.js"
+    }
+  },
   "scripts": {
     "build": "vite build"
   },
